# schetool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  premake5.lua  schetool.sln  test.blf  vcpkg.json
cmake/: install.cmake  package.cmake  platform.cmake
cmake/win-10-sdk-finder/: find_win10_sdk.cmake
include/: bool_container.h  camera.h  data_converter.h  date_container.h  decimal_container.h  edit_history_gui.h  element.h  element_base.h  element_editor_subgui.h  event.h  event_pipe.h  filter.h  filter_base.h  filter_editor_subgui.h  gui.h  gui_event.h  gui_templates.h  input.h  interface.h  io_handler.h  main.h  main_menu_bar_gui.h  number_container.h  program_info.h.in  render.h  schedule.h  schedule_column.h  schedule_constants.h  schedule_core.h  schedule_edit.h  schedule_edit_history.h  schedule_events.h  schedule_gui.h  select_container.h  select_options.h  shader.h  text_container.h  time_container.h  util.h  weekday_container.h  (+1 more)
include/ImGuiFileDialog-Lib_Only/: CustomImGuiFileDialog.h  ImGuiFileDialog-Lib_Only.vcxproj  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
include/constants/: filter_constants.h  general_constants.h  gui_constants.h  schedule_constants.h  signal_constants.h
include/containers/: date_container.h  file_info.h  preferences.h  schedule_coordinates.h  select_container.h  select_options.h  single_select_container.h  time_container.h  time_wrapper.h  time_wrapper_impl_mingw.h  time_wrapper_mingw_impl.h  weekday_container.h
include/glad/: CMakeLists.txt  glad.vcxproj
include/glad/src/: glad.c
include/glfw/: ALL_BUILD.vcxproj  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake  cmake_uninstall.cmake  glfw.vcxproj  uninstall.vcxproj
include/glfw/examples/: INSTALL.vcxproj  boing.vcxproj  cmake_install.cmake  gears.vcxproj  heightmap.vcxproj  offscreen.vcxproj  particles.vcxproj  sharing.vcxproj  simple.vcxproj  splitview.vcxproj  wave.vcxproj
include/glfw/src/: INSTALL.vcxproj  cmake_install.cmake  glfw.vcxproj
include/glfw/tests/: INSTALL.vcxproj  clipboard.vcxproj  cmake_install.cmake  (+19 more)
include/handlers/: gui_textures.h  input.h  notification_handler.h  notification_handler_base_impl.h  notification_handler_linux_impl.h  notification_handler_win_impl.h  render.h  signal_handler.h  signal_handler_impl_base.h  signal_handler_impl_linux.h  signal_handler_impl_win.h  signal_listener.h  signal_listener_impl_base.h  signal_listener_linux_impl.h  signal_listener_win_impl.h  textures.h  time_handler.h  time_tracker.h  window.h
include/interface/: autosave_popup_gui.h  edit_history_gui.h  element_editor_subgui.h  filter_editor_subgui.h  gui.h  gui_templates.h  interface.h  interface_style.h  main_menu_bar_gui.h  schedule_gui.h  start_page_gui.h  text_input_modal_subgui.h
include/io/: blf_base_types.h  data_converter.h  io_handler.h  preferences_data_converter.h  preferences_io.h  schedule_data_converter.h  schedule_io.h  textures.h
include/libconfig/: libconfig.vcxproj
include/schedule/: element.h  element_base.h  filter.h  filter_base.h  filter_group.h  filter_rule.h  filter_rule_base.h  filter_rule_container.h  schedule.h  schedule_column.h  schedule_core.h  schedule_edit.h  schedule_edit_history.h  schedule_events.h
include/util/: util.h  util_types.h
libs/imgui/: CMakeLists.txt  imgui.cpp  imgui.vcxproj  imgui_draw.cpp  imgui_impl_glfw.cpp
libs/imgui/include/: imgui_stdlib.h
libs/imgui/src/: imgui_tables.cpp
libs/notificationcompat/: CMakeLists.txt  DesktopNotificationManagerCompat.cpp
libs/stb/: stb_image.h
packaging/: fix_wix.cmake  fix_wix.py  generator_specific_install.cmake  package_description.txt
shaders/: tile.frag  tile.geom  tile.vert
source/: ImGuiFileDialog.cpp  camera.cpp  data_converter.cpp  date_container.cpp  edit_history_gui.cpp  element.cpp  element_base.cpp  element_editor_subgui.cpp  filter_base.cpp  filter_editor_subgui.cpp  gui.cpp  gui_templates.cpp  input.cpp  interface.cpp  io_handler.cpp  main.cpp  main_menu_bar_gui.cpp  render.cpp  schedule.cpp  schedule_column.cpp  schedule_constants.cpp  schedule_core.cpp  schedule_edit.cpp  schedule_edit_history.cpp  schedule_gui.cpp  select_container.cpp  select_options.cpp  time_container.cpp  weekday_container.cpp  window.cpp
source/constants/: filter_constants.cpp  schedule_constants.cpp
source/containers/: date_container.cpp  file_info.cpp  select_container.cpp  select_options.cpp  single_select_container.cpp  time_container.cpp  time_wrapper.cpp  weekday_container.cpp
source/handlers/: gui_textures.cpp  input.cpp  notification_handler.cpp  notification_handler_linux_impl.cpp  notification_handler_win_impl.cpp  render.cpp  signal_handler.cpp  signal_handler_impl_linux.cpp  signal_handler_impl_win.cpp  signal_handler_linux_impl.cpp  signal_handler_win_impl.cpp  signal_listener.cpp  signal_listener_linux_impl.cpp  signal_listener_win_impl.cpp  textures.cpp  time_handler.cpp  window.cpp
source/interface/: autosave_popup_gui.cpp  edit_history_gui.cpp  element_editor_subgui.cpp  filter_editor_subgui.cpp  gui.cpp  gui_templates.cpp  interface.cpp  interface_style.cpp  main_menu_bar_gui.cpp  schedule_gui.cpp  start_page_gui.cpp  text_input_modal_subgui.cpp
source/io/: data_converter.cpp  io_handler.cpp  preferences_data_converter.cpp  preferences_io.cpp  schedule_data_converter.cpp  schedule_io.cpp  textures.cpp
source/schedule/: element_base.cpp  filter.cpp  filter_base.cpp  filter_group.cpp  filter_rule_base.cpp  schedule.cpp  schedule_column.cpp  schedule_core.cpp  schedule_edit.cpp  schedule_edit_history.cpp
tests/: CMakeLists.txt  main.cpp  test_date_container.h  test_event.h  test_event_pipe.h  test_filter.h  test_filter_editor_subgui.h  test_filter_group.h  test_schedule_gui.h  test_select_options.h  test_time_handler.h  test_time_wrapper.h
tests/containers/: test_date_container.h  test_select_options.h  test_time_wrapper.h
tests/filters/: test_filter.h  test_filter_editor_subgui.h  test_filter_group.h
textures/: icon.ico~
textures/gui/: credits.txt
(+39 files in other folders)
